# Tailored.ai

./: .gitignore  README.md  chat.py  main.py  pinecone_client.py  pyproject.toml
backend/: pyproject.toml
backend/app/: cli.py  main.py  pinecone_client.py
backend/app/api/: chat.py  health.py  ingest.py  integrations.py  sources.py
backend/app/chat/: agent_loop.py  chat_manager.py  citation_normalizer.py  constants.py  context_formatter.py  message.py  openai_client.py  prompts.py  query_rewriter.py  tool_executor.py  tool_registry.py
backend/app/core/: config.py
backend/app/integrations/: export_service.py  intent_router.py  local_thread_client.py  notion_client.py  store.py
backend/app/rag/: retriever.py
backend/app/rag/ingestion/: builders.py  ingest_service.py  pdf_ingester.py  text_chunker.py  text_file_ingester.py  video_file_ingester.py  youtube_ingester.py
backend/app/rag/retrieval/: context_builder.py  query_normalizer.py  ranker.py  search.py
backend/app/schemas/: chat.py  ingest.py  source.py
backend/app/services/: chat_store.py  ingest_catalog_service.py  ingest_job_store.py  session_store.py  source_catalog_store.py  upload_staging.py
backend/mcp_server/: __init__.py  config.py  serializers.py  server.py
backend/tests/: test_chat.py  test_ingest.py  test_integrations.py  test_mcp_server.py  test_sources.py
chat/: chat_manager.py  message.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
rag/: retriever.py
rag/ingestion/: chunker.py
(+35 files in other folders)
